--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -1,7 +1,8 @@
 @font-face {
   font-family: "Montserrat";
   font-display: swap;
-  src: url("../fonts/Montserrat-Bold.woff") format("woff"), url("../fonts/Montserrat-Bold.woff2") format("woff2");
+  src: url("../fonts/Montserrat-Bold.woff") format("woff"),
+    url("../fonts/Montserrat-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
 }
@@ -9,7 +10,8 @@
 @font-face {
   font-family: "Montserrat";
   font-display: swap;
-  src: url("../fonts/Montserrat-ExtraBold.woff") format("woff"), url("../fonts/Montserrat-ExtraBold.woff2") format("woff2");
+  src: url("../fonts/Montserrat-ExtraBold.woff") format("woff"),
+    url("../fonts/Montserrat-ExtraBold.woff2") format("woff2");
   font-weight: 800;
   font-style: normal;
 }
@@ -17,7 +19,8 @@
 @font-face {
   font-family: "Montserrat";
   font-display: swap;
-  src: url("../fonts/Montserrat-Regular.woff") format("woff"), url("../fonts/Montserrat-Regular.woff2") format("woff2");
+  src: url("../fonts/Montserrat-Regular.woff") format("woff"),
+    url("../fonts/Montserrat-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
@@ -25,7 +28,8 @@
 @font-face {
   font-family: "NotoSansJP";
   font-display: swap;
-  src: url("../fonts/NotoSansJP-Thin.woff") format("woff"), url("../fonts/NotoSansJP-Thin.woff2") format("woff2");
+  src: url("../fonts/NotoSansJP-Thin.woff") format("woff"),
+    url("../fonts/NotoSansJP-Thin.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
 }
@@ -33,7 +37,8 @@
 @font-face {
   font-family: "Montserrat";
   font-display: swap;
-  src: url("../fonts/Montserrat-Medium.woff") format("woff"), url("../fonts/Montserrat-Medium.woff2") format("woff2");
+  src: url("../fonts/Montserrat-Medium.woff") format("woff"),
+    url("../fonts/Montserrat-Medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
 }
@@ -165,11 +170,11 @@ body._lock {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 40px 0 0 0;
 }
 
@@ -178,8 +183,8 @@ body._lock {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .header__logo p {
@@ -190,7 +195,7 @@ body._lock {
   width: 100%;
   line-height: 17px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .header__network {
@@ -218,9 +223,11 @@ body._lock {
 
 .header__content {
   width: 473px;
-  margin-top: 230px;
+  margin: 180px 0px 130px 20px;
+  /* margin-left: 20px;
+  margin-top: 230px; */
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .header__title {
@@ -237,7 +244,7 @@ body._lock {
 
 .header__btn {
   border: 3px solid;
-  background-color: #FFE27900;
+  background-color: #ffe27900;
   padding: 20px 73px;
   border-radius: 30px;
   font-size: 15px;
@@ -245,9 +252,9 @@ body._lock {
   line-height: 14px;
   color: #16f0d2;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-box-shadow: 0px 5px 10px #16f0d2;
-          box-shadow: 0px 5px 10px #16f0d2;
+  box-shadow: 0px 5px 10px #16f0d2;
 }
 
 .header__btn:hover {
@@ -257,7 +264,7 @@ body._lock {
 .header__btn:active {
   border: 0px solid;
   -webkit-box-shadow: 0px 5px 8px #16f0d2;
-          box-shadow: 0px 5px 8px #16f0d2;
+  box-shadow: 0px 5px 8px #16f0d2;
 }
 
 .menu__icon {
@@ -297,28 +304,28 @@ body._lock {
 .menu__icon span {
   top: 50%;
   -webkit-transform: scale(1) translate(0px, -50%);
-      -ms-transform: scale(1) translate(0px, -50%);
-          transform: scale(1) translate(0px, -50%);
+  -ms-transform: scale(1) translate(0px, -50%);
+  transform: scale(1) translate(0px, -50%);
 }
 
 .menu__icon._active span {
   -webkit-transform: scale(0) translate(0px, -50%);
-      -ms-transform: scale(0) translate(0px, -50%);
-          transform: scale(0) translate(0px, -50%);
+  -ms-transform: scale(0) translate(0px, -50%);
+  transform: scale(0) translate(0px, -50%);
 }
 
 .menu__icon._active::before {
   top: 50%;
   -webkit-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 .menu__icon._active::after {
   top: 50%;
   -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .menu__body {
@@ -356,6 +363,133 @@ body._lock {
   color: #fff;
 }
 
+/* Слайдер */
+.slick-slider {
+}
+/* Слайдер запущен */
+.slick-slider.slick-initialized {
+}
+/* Слайдер с точками */
+.slick-slider.slick-dotted {
+}
+/* Ограничивающая оболочка */
+.slick-list {
+  overflow: hidden;
+}
+/* Лента слайдов */
+.slick-track {
+  display: flex;
+  align-items: flex-start;
+}
+/* Слайд */
+.slick-slide {
+}
+/* Слайд активный (показывается) */
+.slick-slide.slick-active {
+}
+/* Слайд основной */
+.slick-slide.slick-current {
+}
+/* Слайд по центру */
+.slick-slide.slick-center {
+}
+/* Клонированный слайд */
+.slick-slide.slick-cloned {
+}
+/* Стрелка */
+.slick-arrow {
+}
+/* Стрелка влево */
+.slick-arrow.slick-prev {
+}
+/* Стрелка вправо */
+.slick-arrow.slick-next {
+}
+/* Стрелка не активная */
+.slick-arrow.slick-disabled {
+}
+/* Точки (булиты) */
+.slick-dots {
+}
+.slick-dots li {
+}
+/* Активная точка */
+.slick-dots li.slick-active {
+}
+/* Элемент точки */
+.slick-dots li button {
+}
+
+.slider {
+  position: relative;
+}
+.slider .slick-arrow {
+  position: absolute;
+  background-position: right bottom;
+  bottom: 0;
+  right: 0;
+  font-size: 0;
+  width: 50px;
+  height: 30px;
+}
+
+.slider .slick-arrow.slick-prev {
+  background: url("../img/second-left-arrow\(1\).svg") 100% no-repeat;
+  margin-right: 50px;
+  right: 160px;
+}
+
+.slider .slick-arrow.slick-next {
+  background: url("../img/first-right-arrow\(1\).svg") 100% no-repeat;
+}
+
+.slider .slick-dots {
+  /* margin-top: 20px; */
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 60px;
+}
+.slider .slick-dots li {
+  list-style: none;
+  margin: 0px -10px;
+  opacity: 0.5;
+}
+
+.slider .slick-dots li button {
+  border: 2px solid #fff;
+  color: #fff;
+  background-color: Transparent;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+}
+
+.slider .slick-dots li.slick-active {
+  opacity: 1;
+}
+
+.lightblue {
+  color: rgb(224, 255, 255);
+}
+.lightblue h1 {
+  color: rgb(224, 255, 255);
+}
+
+.lightblue .header__btn {
+  color: rgb(255, 105, 180);
+  box-shadow: 0px 5px 10px rgb(255, 105, 180);
+}
+255, 255, 0
+.yellow {
+  color: rgb(255, 250, 205);
+}
+.yellow h1 {
+  color: rgb(255, 215, 0);
+}
+.yellow .header__btn {
+  color: rgb(255, 255, 0);
+  box-shadow: 0px 5px 10px rgb(255, 255, 0);
+}
 /* 992px - 1200px */
 
 /* 768px - 992px */
