--- a/Site_1/css/style.css
+++ b/Site_1/css/style.css
@@ -133,7 +133,7 @@ h6 {
 body {
   color: #000;
   font-size: 18px;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body._lock {
@@ -141,7 +141,7 @@ body._lock {
 }
 
 .f {
-  color: #000;
+  color: #aaa;
   margin-top: 150px;
 }
 
@@ -152,8 +152,24 @@ body._lock {
 }
 
 .container {
-  width: 1270px;
+  max-width: 1270px;
   margin: 0 auto;
+}
+
+.wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.wrap.main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 
 .header {
@@ -174,12 +190,18 @@ body._lock {
       -ms-flex-align: center;
           align-items: center;
   padding: 40px 0 0 0;
+  position: relative;
 }
 
 .header__block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-right: 80px;
 }
 
 .header__wrap-wrap {
@@ -212,8 +234,11 @@ body._lock {
 }
 
 .header__network {
-  padding-left: 540px;
   padding-right: 67px;
+}
+
+.header__network ul li:first-child {
+  padding-left: 0;
 }
 
 .header__network ul {
@@ -267,16 +292,32 @@ body._lock {
           box-sizing: border-box;
   -webkit-box-shadow: 0px 5px 10px #16f0d2;
           box-shadow: 0px 5px 10px #16f0d2;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .header__btn:hover {
-  opacity: 0.8;
+  opacity: 0.7;
+  -webkit-box-shadow: 0px 3px 7px #16f0d2;
+          box-shadow: 0px 3px 7px #16f0d2;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .header__btn:active {
+  -webkit-transition: all 100ms ease-in 0s;
+  -o-transition: all 100ms ease-in 0s;
+  transition: all 100ms ease-in 0s;
   border: 0px solid;
   -webkit-box-shadow: 0px 5px 8px #16f0d2;
           box-shadow: 0px 5px 8px #16f0d2;
+}
+
+.menu {
+  position: absolute;
+  right: 0;
 }
 
 .menu__icon {
@@ -302,7 +343,7 @@ body._lock {
 
 .menu__icon::before,
 .menu__icon::after {
-  content: "";
+  content: '';
 }
 
 .menu__icon::before {
@@ -511,6 +552,11 @@ body._lock {
   text-align: center;
 }
 
+.technology__container {
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
 .technology__title {
   padding: 100px 0px 72px 0px;
   font-weight: 800;
@@ -522,21 +568,24 @@ body._lock {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 100px;
 }
 
 .technology__image {
-  padding-bottom: 32px;
+  padding-bottom: 30px;
   width: 60px;
   height: 90px;
 }
 
 .technology__wrap {
-  width: 100%;
+  -ms-flex-preferred-size: 270px;
+      flex-basis: 270px;
 }
 
 .technology__wrap h3 {
@@ -550,6 +599,90 @@ body._lock {
   line-height: 22px;
 }
 
+.bio {
+  background: #f8f8f8;
+  position: relative;
+}
+
+.bio__container {
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
+.bio__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.bio__title {
+  font-size: 36px;
+  font-weight: 800;
+  line-height: 44px;
+  padding-bottom: 30px;
+  padding-top: 100px;
+}
+
+.bio__text {
+  padding-bottom: 30px;
+  max-width: 508px;
+}
+
+.bio__content {
+  padding-bottom: 100px;
+}
+
+.bio__element {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-bottom: 40px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.bio__icon {
+  border: 2px solid #000000;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 50%;
+  padding: 13px;
+  margin-right: 13px;
+}
+
+.bio__btn {
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 14.43px;
+  padding: 20px 67px;
+  background: #16f0d2;
+  -webkit-box-shadow: 4px 4px 6px rgba(22, 240, 210, 0.2);
+          box-shadow: 4px 4px 6px rgba(22, 240, 210, 0.2);
+  border-radius: 30px;
+  cursor: pointer;
+  display: block;
+  max-width: 205px;
+}
+
+.bio__width {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.bio__image {
+  max-width: 736px;
+  max-height: 503px;
+  position: absolute;
+  left: 52%;
+  top: 110px;
+}
+
+.footer {
+  background-color: aquamarine;
+  height: 50px;
+}
+
 /* 992px - 1200px */
 
 /* 768px - 992px */
@@ -559,45 +692,24 @@ body._lock {
 /* 320px - 576px */
 
 @media screen and (max-width: 1310px) {
-  .header .container {
-    width: 1170px;
-  }
-
-  .header .header__network {
-    padding-left: 340px;
-  }
-
   .container {
-    width: 1170px;
+    max-width: 1170px;
   }
 }
 
 @media screen and (max-width: 1200px) {
-  .header .container {
-    width: 960px;
-  }
-
-  .header .header__network {
-    padding-left: 240px;
-  }
-
   .container {
-    width: 960px;
+    max-width: 960px;
   }
 }
 
 @media screen and (max-width: 992px) {
-  .header .container {
-    width: 820px;
+  .container {
+    max-width: 720px;
   }
 
   .header .header__network {
-    padding-left: 165px;
     padding-right: 36px;
-  }
-
-  .container {
-    width: 820px;
   }
 
   .technology__wrap h3 {
@@ -610,32 +722,18 @@ body._lock {
 }
 
 @media screen and (max-width: 850px) {
-  .header .container {
-    width: 720px;
-  }
-
   .header .header__network {
-    padding-left: 95px;
     padding-right: 26px;
-  }
-
-  .container {
-    width: 720px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .header .container {
-    width: 640px;
+  .container {
+    max-width: 640px;
   }
 
   .header .header__network {
-    padding-left: 65px;
     padding-right: 16px;
-  }
-
-  .container {
-    width: 640px;
   }
 
   .technology__title {
@@ -644,12 +742,15 @@ body._lock {
   }
 
   .technology__content {
-    display: grid;
-    grid-template-columns: 50% 50%;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 
   .technology__wrap {
     padding-bottom: 30px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 48%;
+            flex: 0 1 48%;
   }
 
   .technology__image {
@@ -662,8 +763,8 @@ body._lock {
 }
 
 @media screen and (max-width: 686px) {
-  .header .container {
-    width: 90%;
+  .container {
+    max-width: 90%;
   }
 
   .header .header {
@@ -676,6 +777,7 @@ body._lock {
 
   .header .header__block {
     display: block;
+    padding-right: 0;
   }
 
   .header .header__wrap {
@@ -688,13 +790,17 @@ body._lock {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     padding-top: 10px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
   }
 
   .header .header__network {
@@ -703,10 +809,6 @@ body._lock {
 
   .header .header__network ul li:first-child {
     padding-left: 0;
-  }
-
-  .header .header__phone {
-    margin-left: 20px;
   }
 
   .header .menu__body {
@@ -733,10 +835,6 @@ body._lock {
     width: 48px;
     height: 48px;
   }
-
-  .container {
-    width: 90%;
-  }
 }
 
 @media screen and (max-width: 380px) and (min-width: 320px) {
@@ -755,10 +853,6 @@ body._lock {
   .header .header__logo img {
     width: 40px;
     height: 40px;
-  }
-
-  .header .header__phone {
-    margin-left: 10px;
   }
 
   .header .header__network li {
