--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -665,16 +665,13 @@ body._lock {
   max-width: 205px;
 }
 
-.bio__width {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-}
-
 .bio__image {
-  max-width: 736px;
-  max-height: 503px;
+  background: url(../img/danial-igdery-large.png) no-repeat right top;
+  background-size: 80% 100%;
+  width: 55%;
+  height: 75vh;
   position: absolute;
-  left: 52%;
+  right: 0;
   top: 110px;
 }
 
@@ -719,6 +716,24 @@ body._lock {
   .technology__wrap p {
     font-size: 14px;
   }
+
+  .bio__wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .bio__width {
+    max-height: auto;
+  }
+
+  .bio__image {
+    position: static;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 850px) {
@@ -744,6 +759,7 @@ body._lock {
   .technology__content {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    padding-bottom: 30px;
   }
 
   .technology__wrap {
@@ -759,6 +775,12 @@ body._lock {
 
   .technology__wrap h3 {
     padding-bottom: 15px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .bio__image {
+    height: 403px;
   }
 }
 
@@ -837,6 +859,16 @@ body._lock {
   }
 }
 
+@media screen and (max-width: 580px) {
+  .bio__image {
+    height: 323px;
+  }
+
+  .bio__image {
+    height: 273px;
+  }
+}
+
 @media screen and (max-width: 380px) and (min-width: 320px) {
   .header .header {
     height: 600px;
@@ -886,5 +918,29 @@ body._lock {
 
   .technology__wrap p {
     font-size: 12px;
+  }
+
+  .bio {
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .bio__title {
+    font-size: 24px;
+    line-height: 29px;
+    padding-top: 70px;
+  }
+
+  .bio__text {
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .bio__content {
+    padding-bottom: 70px;
+  }
+
+  .bio__image {
+    max-height: 226px;
   }
 }
