--- a/Site_1/css/style.css
+++ b/Site_1/css/style.css
@@ -110,7 +110,6 @@ a:hover {
 
 ul li {
   list-style: none;
-  padding-left: 37px;
 }
 
 img {
@@ -133,7 +132,7 @@ h6 {
 body {
   color: #000;
   font-size: 18px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body._lock {
@@ -167,9 +166,16 @@ body._lock {
 }
 
 .wrap.main {
+  min-width: 0;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+}
+
+.title {
+  font-weight: 800;
+  line-height: 44px;
+  font-size: 36px;
 }
 
 .header {
@@ -394,6 +400,7 @@ body._lock {
   -webkit-transition: left 0.5s ease 0s;
   -o-transition: left 0.5s ease 0s;
   transition: left 0.5s ease 0s;
+  padding-left: 30px;
 }
 
 .menu__body._active {
@@ -503,8 +510,13 @@ body._lock {
 
 .slider .slick-dots li {
   list-style: none;
-  margin: 0px -10px;
+  margin: 0 -5px;
   opacity: 0.5;
+  padding-right: 20px;
+}
+
+.slider .slick-dots li:last-child {
+  padding-right: 0;
 }
 
 .slider .slick-dots li button {
@@ -559,9 +571,6 @@ body._lock {
 
 .technology__title {
   padding: 100px 0px 72px 0px;
-  font-weight: 800;
-  line-height: 44px;
-  font-size: 36px;
 }
 
 .technology__content {
@@ -616,9 +625,6 @@ body._lock {
 }
 
 .bio__title {
-  font-size: 36px;
-  font-weight: 800;
-  line-height: 44px;
   padding-bottom: 30px;
   padding-top: 100px;
 }
@@ -640,6 +646,8 @@ body._lock {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
 }
 
 .bio__icon {
@@ -668,16 +676,114 @@ body._lock {
 .bio__image {
   background: url(../img/danial-igdery-large.png) no-repeat right top;
   background-size: 80% 100%;
-  width: 55%;
+  width: 58%;
   height: 75vh;
   position: absolute;
   right: 0;
   top: 110px;
 }
 
-.footer {
-  background-color: aquamarine;
-  height: 50px;
+.work {
+  background: #16f0d2;
+}
+
+.work__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 100px 0 70px 30px;
+}
+
+.work__title {
+  padding-right: 134px;
+}
+
+.work__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: 'NotoSansJP' sans-serif;
+  font-weight: 300;
+  line-height: 20px;
+  font-size: 16px;
+  letter-spacing: 0.1em;
+}
+
+.work__list li {
+  padding-right: 30px;
+}
+
+.work__list li a {
+  color: #000;
+}
+
+.work__list li:last-child {
+  padding-right: 0;
+}
+
+.work__content .swiper-button-next::after,
+.work__content .swiper-button-prev::after {
+  color: #fff;
+}
+
+.work__content .swiper-button-next,
+.work__content .swiper-button-prev {
+  top: 35%;
+}
+
+.work__content .swiper-button-prev {
+  left: 0;
+}
+
+.work__content .swiper-button-next {
+  right: 0;
+}
+
+.work__slider {
+  overflow: hidden;
+  position: relative;
+}
+
+.work__slider .swiper-scrollbar {
+  width: 430px;
+  height: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #e1dcdc;
+  border-radius: 3px;
+  position: static;
+  margin: 0 auto;
+}
+
+.work__slider .swiper-scrollbar-drag {
+  cursor: pointer;
+  background: #ffffff;
+  border-radius: 3px;
+  height: 14px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: -2px;
+}
+
+.work__slider .swiper-notification {
+  padding-bottom: 100px;
+}
+
+.work__slider-wrapper {
+  padding-bottom: 72px;
+}
+
+.work__slider-slider {
+  padding: 0 40px;
+}
+
+.work__slider-image img {
+  max-width: 100%;
 }
 
 /* 992px - 1200px */
@@ -697,6 +803,18 @@ body._lock {
 @media screen and (max-width: 1200px) {
   .container {
     max-width: 960px;
+  }
+}
+
+@media screen and (max-width: 997px) {
+  .work__header {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+
+  .work__title {
+    padding-right: 0;
   }
 }
 
@@ -775,6 +893,21 @@ body._lock {
 
   .technology__wrap h3 {
     padding-bottom: 15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .title {
+    font-size: 30px;
+    line-height: 37px;
+  }
+
+  .work__header {
+    padding: 70px 0 70px 0;
+  }
+
+  .work__slider .swiper-notification {
+    padding-bottom: 70px;
   }
 }
 
@@ -869,7 +1002,34 @@ body._lock {
   }
 }
 
+@media screen and (max-width: 560px) {
+  .work__header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding: 40px 0 40px 0;
+  }
+
+  .work__header .work__title {
+    padding-bottom: 15px;
+  }
+
+  .work__slider .swiper-notification {
+    padding-bottom: 40px;
+  }
+}
+
 @media screen and (max-width: 380px) and (min-width: 320px) {
+  .title {
+    font-size: 24px;
+    line-height: 29px;
+    padding-top: 70px;
+  }
+
   .header .header {
     height: 600px;
   }
@@ -908,10 +1068,6 @@ body._lock {
     padding: 15px 53px;
   }
 
-  .technology__title {
-    font-size: 24px;
-  }
-
   .technology__wrap h3 {
     font-size: 14px;
   }
@@ -926,8 +1082,6 @@ body._lock {
   }
 
   .bio__title {
-    font-size: 24px;
-    line-height: 29px;
     padding-top: 70px;
   }
 
@@ -942,5 +1096,22 @@ body._lock {
 
   .bio__image {
     max-height: 226px;
+  }
+
+  .work__header {
+    padding: 0 0 40px 0;
+  }
+
+  .work__list {
+    font-size: 12px;
+  }
+
+  .work__slider .swiper-scrollbar {
+    height: 7px;
+  }
+
+  .work__slider .swiper-scrollbar-drag {
+    height: 9px;
+    top: -1px;
   }
 }
